# Spreadsheet-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
Backend/: Cell.h  CellDataType.h  PairHash.h  Spreadsheet.h  StoredData.h  StringParser.h
Backend/CellData/: Cell.cpp  Cell.h  CellDataType.cpp  CellDataType.h  FormatType.cpp  FormatType.h  Numeric.cpp  String.cpp
Backend/CellData/NumericFormats/: Boolean.cpp  Date.cpp  Float.cpp  Integer.cpp  NumericFormatType.cpp  Time.cpp
Backend/CellData/StringFormats/: MaxOneSpaceString.cpp  PadLeftString.cpp  PadRightString.cpp  PureString.cpp  StringFormatType.cpp  StrippedString.cpp
Backend/Exceptions/: Exceptions.h
Backend/File Manipulations/: CSVFileHandler.cpp  ConfigFileHandler.cpp  FileHandler.cpp  FileHandler.h  InputFileHandler.cpp  OutputFileHandler.cpp
Backend/Formulas/: Cos.cpp  Formula.cpp  Formula.h  Sin.cpp  Strip.cpp
Backend/Operators/: Divide.cpp  Minus.cpp  Multiply.cpp  Operator.cpp  Operator.h  Plus.cpp  Power.cpp  RightParentheses.cpp  UnaryOperator.cpp
Backend/Parcing/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  StringParser.cpp  StringParser.h
Backend/Spreadsheet/: Spreadsheet.cpp  Spreadsheet.h
Backend/Utilities/: Utilities.cpp  Utilities.h
Concept/: ConceptualSchema.drawio  Schema.drawio  Specification and Description
Configuration/: Config.txt  Constants.cpp  Constants.h
Tests/: Tests.cpp  Tests.h
UI/: Button.h  ChangeFormat.cpp  ChangeType.cpp  Clear.h  Command.h  CommandHandler.cpp  CommandHandler.h  Help.cpp  Import.cpp  Insert.cpp  Print.cpp  Save.cpp  Save.h
src/: main.cpp
src/Tests/: Tests.cpp
src/UI/: Clear.cpp  Command.cpp  Command.h  CommandHandler.cpp  Import.cpp  Insert.cpp
(+24 files in other folders)
